[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turingtrust"
version = "1.0.0"
description = "TuringTrust AI Governance SDK — Drop-in wrappers for LLM providers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "TuringTrust", email = "sdk@turingtrust.ai"}]
keywords = ["ai", "governance", "llm", "compliance", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tiktoken>=0.5.0",
]
langchain = ["langchain-core>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
all = [
    "langchain-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
turingtrust-server = "turingtrust.server:main"

[project.urls]
Homepage = "https://turingtrust.ai"
Documentation = "https://docs.turingtrust.ai"
Repository = "https://github.com/turingtrust/turingtrust"

[tool.setuptools]
license-files = ["turingtrust/LICENSE"]

[tool.setuptools.packages.find]
include = ["turingtrust", "turingtrust.*"]
exclude = ["turingtrust_backend", "turingtrust_backend.*", "turingtrust_sdk", "turingtrust_sdk.*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
