[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turingtrust"
version = "2.0.0"
description = "AI governance SDK — PII detection, multi-provider gateway, quota management, BYOK + Managed key modes, and pluggable middleware for LLM operations."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "TuringTrust", email = "sdk@turingtrust.ai"}]
keywords = ["ai", "governance", "llm", "pii", "compliance", "security", "gateway", "openai", "anthropic", "freemium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tiktoken>=0.5.0",
]
langchain = ["langchain-core>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]
all = [
    "langchain-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
turingtrust-server = "turingtrust.server:main"

[project.urls]
Homepage = "https://turingtrust.ai"
Documentation = "https://docs.turingtrust.ai"
Repository = "https://github.com/turingtrust/turingtrust"
Issues = "https://github.com/turingtrust/turingtrust/issues"
Changelog = "https://github.com/turingtrust/turingtrust/blob/main/CHANGELOG.md"
Pricing = "https://turingtrust.ai/pricing"

[tool.setuptools.packages.find]
include = ["turingtrust", "turingtrust.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
